--- a/KesaKoRun/kesako/kesako.ini
+++ b/KesaKoRun/kesako/kesako.ini
@@ -23,4 +23,8 @@ listWatcherInterval=10
 indexInterval=5
 #nombre de secondes entre 2 séquances de réinitialisation des erreurs
 indexErrorInterval=10
+#---------------
+#Logo of the HMI
+#---------------
+#hmiLogo=logo.jpg
 #fin
